[package]
name = "csgoroll-sniper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "csgoroll-sniper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
ahash = "0.8"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# capsolver: TBD — verify crate name with cargo search
# Neither `capsolver` nor `capsolver-rs` resolve on crates.io as of 2026-02-24.
# Phase 4 plan will integrate the actual CapSolver API; use reqwest directly or
# vendor a thin client at that stage.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
